# Hanoi-Routing

./: .gitignore  AGENTS.md  CLAUDE.md  bench_results.json  multi_route_result.geojson  query_2026-04-02T100314.geojson
CCH-Generator/: .gitignore  CMakeLists.txt
CCH-Generator/scripts/: build_targets  compare_profiles
CCH-Generator/src/: generate_graph.cpp  graph_utils.h  validate_graph.cpp
CCH-Hanoi/: .gitignore  README.md  README_ALTERNATIVE.md  README_ALTERNATIVE_VI.md  README_MAINTENANCE.md  README_MAINTENANCE_VI.md  README_VI.md
CCH-Hanoi/.cargo/: config.toml
CCH-Hanoi/crates/hanoi-bench/: Cargo.toml
CCH-Hanoi/crates/hanoi-bench/benches/: cch_bench.rs  spatial_bench.rs
CCH-Hanoi/crates/hanoi-bench/src/: core.rs  dataset.rs  lib.rs  log.rs  report.rs  server.rs  spatial.rs
CCH-Hanoi/crates/hanoi-cli/: Cargo.toml
CCH-Hanoi/crates/hanoi-cli/src/: main.rs
CCH-Hanoi/crates/hanoi-core/: Cargo.toml
CCH-Hanoi/crates/hanoi-core/src/: bounds.rs  cch.rs  cch_cache.rs  geometry.rs  graph.rs  lib.rs  line_graph.rs  multi_route.rs  spatial.rs  via_way_restriction.rs
CCH-Hanoi/crates/hanoi-core/src/geo/: mod.rs
CCH-Hanoi/crates/hanoi-core/src/geo/spatial/: index.rs  metric.rs  mod.rs  snap.rs
CCH-Hanoi/crates/hanoi-core/src/graph/: cache.rs  data.rs  mod.rs
CCH-Hanoi/crates/hanoi-core/src/guidance/: mod.rs  turn_annotation.rs  turn_classify.rs  turn_refine.rs
CCH-Hanoi/crates/hanoi-core/src/restrictions/: mod.rs
CCH-Hanoi/crates/hanoi-core/src/routing/: alternatives.rs  answer.rs  mod.rs  snap.rs
CCH-Hanoi/crates/hanoi-core/src/routing/line_graph/: context.rs  coordinate_patch.rs  engine.rs  mapping.rs  mod.rs
CCH-Hanoi/crates/hanoi-core/src/routing/normal/: context.rs  engine.rs  mod.rs
CCH-Hanoi/crates/hanoi-gateway/: Cargo.toml  README.md  README_VI.md  gateway.yaml
CCH-Hanoi/crates/hanoi-gateway/src/: config.rs  main.rs  proxy.rs  types.rs
CCH-Hanoi/crates/hanoi-server/: Cargo.toml  README.md  README_VI.md
CCH-Hanoi/crates/hanoi-server/src/: camera_overlay.rs  engine.rs  handlers.rs  lib.rs  main.rs  route_eval.rs  state.rs  traffic.rs  types.rs  ui.rs
CCH-Hanoi/crates/hanoi-server/src/api/: state.rs
CCH-Hanoi/crates/hanoi-server/src/api/dto/: customize.rs  mod.rs  query.rs  status.rs  ui.rs
CCH-Hanoi/crates/hanoi-server/src/api/handlers/: customize.rs  mod.rs  query.rs  status.rs  ui.rs
CCH-Hanoi/crates/hanoi-server/src/app/: args.rs  bootstrap.rs  mod.rs  routes.rs  tracing.rs
CCH-Hanoi/crates/hanoi-server/src/runtime/: dispatch.rs  mod.rs  response.rs  worker.rs
CCH-Hanoi/crates/hanoi-server/src/ui/: mod.rs  static_assets.rs
CCH-Hanoi/crates/hanoi-server/src/ui/camera/: loader.rs  mod.rs  overlay.rs
CCH-Hanoi/crates/hanoi-server/src/ui/route_eval/: line_graph.rs  mod.rs  normal.rs  parser.rs
CCH-Hanoi/crates/hanoi-server/src/ui/traffic/: mod.rs  overlay.rs  road_flags.rs
CCH-Hanoi/crates/hanoi-server/static/: app.js  index.html  styles.css
CCH-Hanoi/crates/hanoi-tools/: Cargo.toml
CCH_Data_Pipeline/: .gitignore  build.gradle.kts  hanoi_motorcycle.http  settings.gradle.kts
CCH_Data_Pipeline/app/: build.gradle.kts
CCH_Data_Pipeline/config/: mvp_camera.yaml
CCH_Data_Pipeline/examples/: cameras.sample.yaml
CCH_Data_Pipeline/gradle/: libs.versions.toml
CCH_Data_Pipeline/mvp/: build.gradle.kts
CCH_Data_Pipeline/res/: hanoi_motorcycle_res_1.geojson  hanoi_motorcycle_res_2.geojson  hanoi_motorcycle_res_3.geojson  hanoi_motorcycle_res_4.geojson
CCH_Data_Pipeline/smoother/: build.gradle.kts
Maps/: .gitignore  hanoi.poly  hp.poly  notes.txt
RoutingKit/: Makefile
RoutingKit/src/: conditional_restriction_decoder.cpp  conditional_restriction_resolver.cpp  conditional_turn_extract.cpp  osm_condition_parser.cpp  osm_profile.cpp  osm_simple.cpp
camera-config-web/: README.md  requirements.txt  server.py
camera-config-web/docs/: CHANGELOGS.md
camera-config-web/static/: app.js  index.html  styles.css
docs/: CHANGELOGS.md  Data Pipeline.md  Dieu tra chat luong tuyen duong thay the.md  Hướng dẫn cài đặt triển khai.md  Hướng dẫn sử dụng.md  Hướng dẫn đọc tài liệu và source.md
docs/done/: Audit Findings 2026-03-12.md  Audit Findings 2026-03-18.md  CCH Customization And Query.md  CCH-Generator Plan.md  CCH-Hanoi Structure Rework.md  Camera Way Propagation.md  Conditional Turn Integration Plan.md  Conditional Turns Implementation.md  Coordinate Boundary Validation.md  Enhanced Health Monitoring & Graceful Shutdown Timeout.md  Fixes and Design Observations 2026-03-18.md  Hanoi Speed Calibration Plan.md  Line Graph Generator Plan.md  Live Weight MVP Test Scenarios.md  Live Weight MVP.md  Map Structure Reorganization.md  Motorcycle Profile Implementation.md  Multi-Via-Way Audit 2.md  Multi-Via-Way Audit.md  Multi-Via-Way Turn Restrictions.md  Performance Benchmarking Module.md  Profile-Aware Conditional Resolver Proposal.md  Progressive Snapping.md  RAM-Optimized-CCH-Architecture.md  Structured Logging with Tracing.md  Turn Direction Detection.md  Turn Refinement Pipeline v2.md  Turn Refinement Pipeline.md  Via-Way Turn Restrictions.md  multi-route-improvements.md
docs/planned/: Concurrency-10K-CCU.md  Distance to Next Maneuver.md  Live Weight Pipeline.md  Proximity-First-Snapping.md  Smoother Module.md  Turn Refinement Pipeline v3.md  multi-route-improvements.md
docs/walkthrough/: CCH Deep Dive.md  (+20 more)
rust_road_router/: flow_cutter_cch_cut_order.sh  flow_cutter_cch_cut_reorder.sh  flow_cutter_cch_order.sh
scripts/: multi_query_ui.html  pipeline  query_and_view.ps1  query_and_view.sh  query_ui.html  run_pipeline.sh  serve_query_ui.py  start_server.sh  test_queries.sh  visualize_route.html  visualize_route.ps1  visualize_route.sh  wsl_build_remaining.sh  wsl_setup.sh
(+60 files in other folders)
