[package]
name = "hanoi-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
hanoi-core = { path = "../hanoi-core" }
rust_road_router = { path = "../../../rust_road_router/engine" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
statrs = "0.18"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cch_bench"
harness = false

[[bench]]
name = "spatial_bench"
harness = false

[[bin]]
name = "bench_core"
path = "src/bin/bench_core.rs"

[[bin]]
name = "bench_server"
path = "src/bin/bench_server.rs"

[[bin]]
name = "bench_report"
path = "src/bin/bench_report.rs"
