[package]
name = "hanoi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
hanoi-core = { path = "../hanoi-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = "0.4"

[[bin]]
name = "cch-hanoi"
path = "src/main.rs"
