[package]
name = "hanoi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_road_router = { path = "../../../rust_road_router/engine" }
kiddo = "5"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
sha2 = "0.11.0"
memmap2 = "0.9.10"
chrono = "0.4"
