[package]
name = "hanoi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hanoi-core = { path = "../hanoi-core" }
rust_road_router = { path = "../../../rust_road_router/engine" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "decompression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
tracing-tree = "0.4"

[[bin]]
name = "hanoi_server"
path = "src/main.rs"
