[package]
name = "hanoi-server"
version = "0.1.0"
edition = "2024"

[features]
default = []
ui = ["dep:arrow", "dep:serde_yaml"]

[dependencies]
hanoi-core = { path = "../hanoi-core" }
rust_road_router = { path = "../../../rust_road_router/engine" }
axum = "0.8.9"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "decompression-gzip", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
tracing-tree = "0.4"
arrow = { version = "58.1.0", optional = true }
serde_yaml = { package = "yaml_serde", version = "0.10", optional = true }
flume = "0.12.0"

[[bin]]
name = "hanoi_server"
path = "src/main.rs"
